objects/Limit__c.object
<CustomObject>
    <fields>
        <fullName>CURRENT__c</fullName>
        <label>CURRENT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Created_DateTime__c</fullName>
        <description>Provides a Date AND Time of the Limit created date</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Limit_Name__c</fullName>
        <label>Limit Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HourlyTimeBasedWorkflow</fullName>
                </value>
                <value>
                    <fullName>DailyWorkflowEmails</fullName>
                </value>
                <value>
                    <fullName>HourlyODataCallout</fullName>
                </value>
                <value>
                    <fullName>HourlyLongTermIdMapping</fullName>
                </value>
                <value>
                    <fullName>HourlyShortTermIdMapping</fullName>
                </value>
                <value>
                    <fullName>DailyDurableStreamingApiEvents</fullName>
                </value>
                <value>
                    <fullName>MonthlyPlatformEvents</fullName>
                </value>
                <value>
                    <fullName>DailyStandardVolumePlatformEvents</fullName>
                </value>
                <value>
                    <fullName>DailyDurableGenericStreamingApiEvents</fullName>
                </value>
                <value>
                    <fullName>DurableStreamingApiConcurrentClients</fullName>
                </value>
                <value>
                    <fullName>DailyApiRequests</fullName>
                </value>
                <value>
                    <fullName>DailyBulkApiRequests</fullName>
                </value>
                <value>
                    <fullName>DailyGenericStreamingApiEvents</fullName>
                </value>
                <value>
                    <fullName>DailyStreamingApiEvents</fullName>
                </value>
                <value>
                    <fullName>SingleEmail</fullName>
                </value>
                <value>
                    <fullName>MassEmail</fullName>
                </value>
                <value>
                    <fullName>PermissionSets</fullName>
                </value>
                <value>
                    <fullName>HourlyDashboardRefreshes</fullName>
                </value>
                <value>
                    <fullName>HourlyDashboardResults</fullName>
                </value>
                <value>
                    <fullName>HourlyDashboardStatuses</fullName>
                </value>
                <value>
                    <fullName>HourlySyncReportRuns</fullName>
                </value>
                <value>
                    <fullName>HourlyAsyncReportRuns</fullName>
                </value>
                <value>
                    <fullName>ConcurrentSyncReportRuns</fullName>
                </value>
                <value>
                    <fullName>ConcurrentAsyncGetReportInstances</fullName>
                </value>
                <value>
                    <fullName>DailyAnalyticsDataflowJobExecutions</fullName>
                </value>
                <value>
                    <fullName>DailyAnalyticsUploadedFilesSizeMB</fullName>
                </value>
                <value>
                    <fullName>AnalyticsExternalDataSizeMB</fullName>
                </value>
                <value>
                    <fullName>Package2VersionCreates</fullName>
                </value>
                <value>
                    <fullName>DailyAsyncApexExecutions</fullName>
                </value>
                <value>
                    <fullName>StreamingApiConcurrentClients</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MAX__c</fullName>
        <label>MAX</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Limit</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Limit_Name__c</columns>
        <columns>CURRENT__c</columns>
        <columns>MAX__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>L-{000}</displayFormat>
        <label>Limit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Limits</pluralLabel>
    <recordTypes>
        <fullName>Org_Limit</fullName>
        <active>true</active>
        <label>Org Limit</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>